Trying if z-index inherit on login dropdown fixes issue.

--- a/public/LESS_FILES/custom.less
+++ b/public/LESS_FILES/custom.less
@@ -23,7 +23,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-user:before {
+.icomoon-user:before {
     content: "\e600";
 }
 .relative {
@@ -245,6 +245,9 @@
     margin-top: 20px;
 }
 
+#euro-and-price {
+    z-index: inherit;
+}
 #euro-and-price.border-green .odometer-digit {
   border-bottom: 1px solid #82ae00 !important;
 }
